# HumansVsGoblinsDemo

./: .gitignore  CMakeLists.txt  README.md  gen_vs_project_example.bat
Resources/Maps/: demoMapExterior.map  demoMapInterior.map  map1.map
Src/: main.c
